# raylib_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1
src/: main.cpp
